examples/failing/xhr/flashsocket.js
/home/dvv/node_modules/Socket.IO-node/lib/transports/flashsocket.js